[gd_scene load_steps=20 format=2]

[ext_resource path="res://sprites/floor.png" type="Texture" id=1]
[ext_resource path="res://sprites/wall.png" type="Texture" id=2]
[ext_resource path="res://Main.gd" type="Script" id=3]
[ext_resource path="res://Bowl.tscn" type="PackedScene" id=4]
[ext_resource path="res://sprites/hunger_bar.png" type="Texture" id=5]
[ext_resource path="res://sprites/hunger_bar_empty.png" type="Texture" id=6]
[ext_resource path="res://sprites/hunger_icon.png" type="Texture" id=7]
[ext_resource path="res://sprites/waste_bar.png" type="Texture" id=8]
[ext_resource path="res://sprites/waste_bar_empty.png" type="Texture" id=9]
[ext_resource path="res://sprites/barrel_side.png" type="Texture" id=10]
[ext_resource path="res://Font.tres" type="DynamicFont" id=11]
[ext_resource path="res://MainTheme.tres" type="Theme" id=12]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 12, 360 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 12, 360 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 640, 19 )

[sub_resource type="Shader" id=4]
code = "shader_type canvas_item;

uniform vec2 target = vec2(0.5);

void fragment() {
	COLOR.a = clamp(distance(UV, target) - 0.25, 0, 1);
}"

[sub_resource type="ShaderMaterial" id=5]
shader = SubResource( 4 )
shader_param/target = Vector2( 0.5, 0.5 )

[sub_resource type="Animation" id=6]
tracks/0/type = "value"
tracks/0/path = NodePath("FadeLayer/Fade:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("FadeLayer/Fade:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, true, false ]
}

[sub_resource type="Environment" id=7]
background_mode = 4
tonemap_mode = 3
glow_enabled = true
glow_blend_mode = 0

[node name="Main" type="Node2D"]
script = ExtResource( 3 )

[node name="Walls" type="StaticBody2D" parent="."]

[node name="LeftWall" type="CollisionShape2D" parent="Walls"]
position = Vector2( -12, 360 )
shape = SubResource( 1 )

[node name="RightWall" type="CollisionShape2D" parent="Walls"]
position = Vector2( 1292, 360 )
shape = SubResource( 2 )

[node name="Background" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="Floor" type="StaticBody2D" parent="."]
position = Vector2( 640, 675 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor"]
shape = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="Floor"]
texture = ExtResource( 1 )

[node name="FoodTimer" type="Timer" parent="."]
one_shot = true

[node name="HungerTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true
autostart = true

[node name="Bowl" parent="." instance=ExtResource( 4 )]
position = Vector2( 640, 600 )

[node name="HungerBar" type="TextureProgress" parent="."]
margin_left = 48.0
margin_top = 452.0
margin_right = 149.0
margin_bottom = 457.0
rect_rotation = -90.0
rect_scale = Vector2( 4, 4 )
value = 100.0
texture_under = ExtResource( 6 )
texture_progress = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="HungerBar"]
margin_left = -30.5
margin_top = -8.0
margin_right = -23.5
margin_bottom = -1.0
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 7 )
flip_h = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WasteBar" type="TextureProgress" parent="."]
margin_left = 1196.0
margin_top = 452.0
margin_right = 1297.0
margin_bottom = 457.0
rect_rotation = -90.0
rect_scale = Vector2( 4, 4 )
texture_under = ExtResource( 9 )
texture_progress = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="WasteBar"]
margin_left = -7.5
margin_top = -9.75
margin_right = 8.5
margin_bottom = 6.25
rect_rotation = 90.0
rect_scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FadeLayer" type="CanvasLayer" parent="."]

[node name="Fade" type="ColorRect" parent="FadeLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Vignette" type="ColorRect" parent="FadeLayer"]
material = SubResource( 5 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_right = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="FadeAnim" type="AnimationPlayer" parent="."]
autoplay = "Fade"
anims/Fade = SubResource( 6 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 7 )

[node name="PauseScreen" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="PauseScreen"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -256.0
margin_top = -256.0
margin_right = 256.0
margin_bottom = 256.0
color = Color( 0.137255, 0.121569, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PauseScreen"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -144.0
margin_top = -183.0
margin_right = -72.0
margin_bottom = -163.0
rect_scale = Vector2( 4, 4 )
custom_fonts/font = ExtResource( 11 )
text = "PAUSED"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Unpause" type="Button" parent="PauseScreen"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -23.5
margin_top = -16.0
margin_right = 23.5
margin_bottom = 16.0
theme = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="FoodTimer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="HungerTimer" to="." method="_on_HungerTimer_timeout"]
